# SPCA-Scale-Project

./: .gitignore  .gitmodules.txt  README.md  package-lock.json  team.tex
project/backend/: package-lock.json  package.json  tsconfig.json
project/backend/src/: server.ts
project/backend/src/database/: DummyData.ts  firebase.ts
project/backend/src/models/: DogModel.ts  LocationModel.ts
project/backend/src/routes/: routes.ts  tester.ts
project/backend/src/routes/api/: chat.ts  dog.ts  location.ts  pico.ts  user.ts
project/backend/test/: test.js
project/embedded/: CMakeLists.txt
project/embedded/header/: adc.h  wifi.h
project/embedded/src/: adc.c  main.c  wifi.c
project/frontend-mobile/client/: README.md  app.json  babel.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
project/frontend-mobile/client/app/: _layout.js  auth.js  index.js
project/frontend-mobile/client/app/home/: _layout.js
project/frontend-mobile/client/components/: index.js
project/frontend-mobile/client/components/auth/: Login.jsx
project/frontend-mobile/client/components/chart/: ChartCard.jsx
project/frontend-web/client/: index.html  package-lock.json  package.json  tailwind.config.js
project/frontend-web/client/src/: App.jsx  firebase.js  index.css  main.jsx
project/hardware/pico/: adc_moving_average.c
proposal/parts/: appendices.tex  business-case.tex  conclusion.tex  feedback.tex  summary.tex  technical-hardware.tex  technical-overview.tex  technical-software.tex
risk-analysis/: analysis.tex
(+56 files in other folders)
